adjusted to new SAP-specific simulation server